Minor refactoring, full documentation - Added initial install script with install and uninstall functionality, currently installs keyportal-agent as systemd service - Added full documentation to all classes, and methods - Refactored the KeyPoller, extracted lambda methods for better readability

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 poll:
   agent-name: east-1
-  poll-key: 1234567ABC
 quarkus:
   http:
     port: 8090
@@ -12,6 +11,6 @@ quarkus:
   rabbitmqclient:
     username: user
     password: pass
-    hostname: localhost
+    hostname: 192.168.1.232
     port: 5672
     virtual-host: /
